openshift/webui/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: demo-webui
  labels:
    app: webui
    app.kubernetes.io/name: webui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: tuxedo-to-camel-demo
spec:
  selector:
    app: webui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
